# spl

./: CMakeLists.txt  README.md  Test_all_features.spl  build.ps1  installer.nsi  spl_for_dummies.md  spl_for_dummies.txt
docs/: ADVANCED_ERROR_HANDLING.md  AUDIT_REPORT.md  CLI_AND_REPL.md  EXAMPLES_INDEX.md  GETTING_STARTED.md  GLOSSARY.md  HOW_TO_CODE_SPL.md  LANGUAGE_OVERVIEW.md  LOW_LEVEL_AND_MEMORY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REFACTOR_SUMMARY.md  ROADMAP.md  SECURITY_AND_SAFETY.md  SPL_2DGRAPHICS_API.md  SPL_ADVANCED_GRAPHICS_API.md  SPL_GAME_API.md  SPL_HYBRID_SYNTAX.md  SPL_ONLY_GUIDE.md  SPL_UNIQUE_SYNTAX_AND_LOW_LEVEL.md  TESTING.md  TROUBLESHOOTING.md  language_syntax.md  standard_library.md
examples/: 01_hello.spl  02_variables.spl  03_conditionals.spl  04_loops.spl  05_functions.spl  06_arrays.spl  07_maps.spl  08_strings.spl  09_import_stdlib.spl  10_file_io.spl  11_try_catch.spl  12_lambda.spl  13_graphics.spl  14_match.spl  15_bouncy_ball.spl  README.md
lib/spl/: algo.spl  bits.spl  cli_utils.spl  color.spl  core.spl  counter.spl  date_utils.spl  dict_utils.spl  env_utils.spl  funtools.spl  graph_utils.spl  hex_utils.spl  html.spl  io_utils.spl  iter_utils.spl  list_utils.spl  log_utils.spl  math_extra.spl  mem_utils.spl  num_utils.spl  pairs.spl  path_utils.spl  prelude.spl  queue.spl  range_utils.spl  result.spl  set_utils.spl  sort_utils.spl  stack.spl  stats.spl  str_buf.spl  string_utils.spl  table.spl  testing.spl  textwrap.spl
spl-ide/: package-lock.json  package.json
spl-ide/main/: main.js
spl-ide/preload/: preload-overlay.js  preload.js
spl-ide/src/: index.html  overlay.html  renderer.js  styles.css
src/: errors.cpp  errors.hpp  import_resolution.cpp  import_resolution.hpp  main.cpp  stdlib_modules.cpp  stdlib_modules.hpp
src/compiler/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
src/game/: game_builtins.cpp  game_builtins.hpp  game_main.cpp
src/modules/g2d/: colors.cpp  colors.h  g2d.cpp  g2d.h  renderer.cpp  renderer.h  shapes.cpp  shapes.h  text.cpp  text.h  window.cpp  window.h
src/process/: process_module.cpp  process_module.hpp
src/repl/: repl_main.cpp
src/vm/: builtins.hpp  bytecode.hpp  script_code.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
tests/: README.md  run_tests.ps1  spl_test_tmp_file.txt  test.txt  test_builtins.spl  test_out.txt  test_parser.spl  test_syntax.spl
